# Ros2

docker/: docker-compose.yml
share/: Ros2_Handbook.md  my_setup.sh
share/project/: .clangd  mk_clang.sh
share/project/basic/: first_ros2_node.cpp
share/project/chapt2_ws/src/example_cpp/: CMakeLists.txt  package.xml
share/project/chapt2_ws/src/example_cpp/src/: node_01.cpp  node_03.cpp
share/project/chapt2_ws/src/example_py/: setup.py
share/project/chapt2_ws/src/example_py/example_py/: node_02.py  node_04.py
share/project/chapt3_ws/src/example_interface_rclcpp/: CMakeLists.txt  package.xml
share/project/chapt3_ws/src/example_interface_rclcpp/src/: example_interfaces_control_01.cpp  example_interfaces_robot_01.cpp
share/project/chapt3_ws/src/example_ros2_interface/: CMakeLists.txt  package.xml
share/project/chapt3_ws/src/example_ros2_interface/msg/: RobotPose.msg  RobotStatus.msg
share/project/chapt3_ws/src/example_ros2_interface/srv/: MoveRobot.srv
share/project/chapt3_ws/src/example_service_rclcpp/: CMakeLists.txt  package.xml
share/project/chapt3_ws/src/example_service_rclcpp/src/: service_client_01.cpp  (+1 more)
share/project/chapt3_ws/src/example_topic_rclcpp/: CMakeLists.txt  package.xml
share/project/chapt4_ws/src/example_action_rclcpp/: CMakeLists.txt  package.xml
share/project/chapt4_ws/src/robot_control_interfaces/: CMakeLists.txt  package.xml
share/project/my_robot_ws/src/robot_interfaces/: CMakeLists.txt  package.xml
share/project/my_robot_ws/src/robot_rclcpp/: CMakeLists.txt  package.xml
share/project/robot_with_action_ws/src/robot_interfaces/: CMakeLists.txt  package.xml
share/project/robot_with_action_ws/src/robot_rclcpp/: CMakeLists.txt  package.xml
share/project/robot_with_action_ws/src/robot_rclcpp/include/robot_rclcpp/: robot.h
share/project/robot_with_action_ws/src/robot_rclcpp/src/: control_01.cpp  robot.cpp  robot_01.cpp
(+13 files in other folders)
